--- a/templates/home.html
+++ b/templates/home.html
@@ -686,7 +686,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>&copy; 2023 AIRecommend Technologies. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2023 ASMB Technologies. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </div>
 </footer>
 {% endblock %}
