--- a/templates/base.html
+++ b/templates/base.html
@@ -323,6 +323,9 @@
                 </div>
             </div>
         </div>
+        <div style="text-align: center; color: black;">
+            © 2023 AIRecommend Technologies. All rights reserved. | Privacy Policy | Terms of Service
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
