--- a/templates/home.html
+++ b/templates/home.html
@@ -685,8 +685,8 @@
             </ul>
         </div>
     </div>
-    <div class="copyright">
-        <p>&copy; 2023 ASMB Technologies. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+    <div style="text-align: center; color: black;">
+        © 2023 ASMB Technologies. All rights reserved. | Privacy Policy | Terms of Service
     </div>
 </footer>
 {% endblock %}
